fix modal z-index

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -19,6 +19,7 @@ p {
 
 .modal {
   position: absolute;
+  z-index: 3;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
